# dto-code-generator

./: .gitignore  README.txt  pyproject.toml  requirements.txt  setup.py
cg/: __init__.py  all.py  cpp.py  python.py  typescript.py
cgdto/: Code.py  Code_Cpp.py  Code_Python.py  Code_Typescript.py  __init__.py  all.py  cpp.py  csharp.py  experimental1.py  experimental2.py  python.py  setup.py  typescript.py
examples/: .gitignore
examples/1/: runme.py
examples/1/languages/cpp/: meson.build  run
examples/1/languages/csharp/: run-csharp.cs
examples/1/languages/python/: run
examples/1/languages/typescript/: dto_tests.ts  run
examples/1/output/: dto-tests.cpp  dto.cpp  dto.cs  dto.py  dto.ts  dto_tests.cpp  dto_tests.py  dto_tests.ts
examples/mcsdk/: cg  include.py  include.ts  run-create-dto-and-test.sh  runme.py  schema.py
examples/mcsdk/doc/: Functions.rst  conf.py  extract_documentation.py  index.rst
examples/mcsdk/doc/_build/doctrees/: ComputationalGrid.doctree  EvaluationGrid.doctree  EvaluationResult.doctree  Functions.doctree  Introduction.doctree  environment.pickle  index.doctree
examples/mcsdk/doc/_build/html/: .buildinfo  ComputationalGrid.html  EvaluationGrid.html  EvaluationResult.html  Functions.html  Introduction.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/mcsdk/doc/functions/: Option.md
examples/mcsdk/languages/cpp/: meson.build
examples/mcsdk/languages/csharp/: run
examples/mcsdk/languages/typescript/: package-lock.json
examples/mcsdk/output/: dto.cpp  dto.py  dto.ts  dto_tests.cpp  dto_tests.py  dto_tests.ts
examples/mcsdk/output/doc/: conf.py
examples/mcsdk/output/dto/: mcsdk.cpp  mcsdk.py  mcsdk.ts
examples/mcsdk/output/dto/cpp/: AverageInInterval.hpp  Barrier.hpp  BrownianMotion.hpp  BrownianMotionRef.hpp  Error.hpp  (+27 more)
examples/mcsdk/output/test/: mcsdk_test.cpp  mcsdk_test.py  mcsdk_test.ts
examples/mcsdk/output/test/cpp/: meson.build  run  test.cpp
examples/versioning/: .gitignore  auto-testing.sh  pytest.ini  test_a.py
scripts/: cgdto
src/cgdto/: Code.py  Code_Cpp.py  Code_Python.py  Code_Typescript.py  all.py
tests/: .gitignore  test_main.py
tests/doc/: Dockerfile  EvaluationResult.rst  Introduction.rst
tests/doc/_build/doctrees/: Functions.doctree
tests/doc/_build/html/: ComputationalGrid.html
tests/doc/functions/: CorrelatedGaussian.md  Multiplication.md
tests/empty_schema/: schema.py
tests/mcsdk/: include.py  schema.py  test_main.py
tests/mcsdk/doc/functions/: Division.md  GeometricalBrownianMotion.md  HullWhite1FactorModel.md
tests/mcsdk_schema/: schema.py
tests/openapi_schema/: array_and_boolean.yaml  petstore.yaml  property_anyOf.yaml  schema.py
tests/schema_openapi/: schema.py
(+90 files in other folders)
